[package]
name = "supports-ansi"
description = "Detect whether a terminal supports ANSI escape sequences"
version = "0.1.0"
authors = ["Evan Williams <ejw@fig.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

